5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1575_1333.log
== TEST (2019-03-12 23:06:15) 
-- CODE:
expressao = 
print(30 - 3**2 + 8 // 3 **2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:06:56) 
-- CODE:
expressao = 30 - 3**2 + 8 // 3**2 * 10
print(30 - 3**2 + 8 // 3 **2 * 10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:07:02) 
-- CODE:
expressao = 30 - 3**2 + 8 // 3**2 * 10
print(30 - 3**2 + 8 // 3 **2 * 10)
-- EXECUTION TIME:
0.168387
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
